syntax = "proto3";

package model;

import "proto/model/ability.proto";
import "proto/model/enums.proto";
import "proto/model/location.proto";

option go_package = "github.com/user/repo/proto/model";

// Character 表示游戏中的一个角色。
message Character {
  string id = 1;
  string name = 2;
  repeated string traits = 3;
  LocationType current_location = 4;
  int32 paranoia = 5;
  int32 goodwill = 6;
  int32 intrigue = 7;
  bool is_alive = 8;
  repeated Ability abilities = 9;
  RoleType hidden_role = 10;
}

// CharacterConfig 定义特定剧本中角色的初始状态。
message CharacterConfig {
  string character_id = 1;
  LocationType initial_location = 2;
  RoleType hidden_role = 3;
  string is_culprit_for = 4;
}